--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_platform_widgets: ^2.0.0
+  flutter_platform_widgets:
+    git:
+      url: https://github.com/Flutter-Fox/flutter_platform_widgets.git
+      ref: definitelyme-patch
   cupertino_list_tile: ^0.2.1
   cupertino_stepper: ^0.2.1
   cupertino_progress_bar: ^0.2.0
